[metadata]
name = python-laosclient
summary = OpenStack Functions API Client Library
description-file =
    README.rst
author = OpenStack
author-email = openstack-dev@lists.openstack.org
home-page = http://docs.openstack.org/developer/python-laosclient
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5

[files]
packages =
    laosclient

[entry_points]
openstack.cli.extension =
    functions = laosclient.osc.plugin

openstack.functions.v1 =
    fn-apps_list = laosclient.osc.v1.apps:ListApps
    fn-apps_show = laosclient.osc.v1.apps:ShowApp
    fn-apps_create = laosclient.osc.v1.apps:CreateApp
    fn-apps_delete = laosclient.osc.v1.apps:DeleteApp
    fn-apps_update = laosclient.osc.v1.apps:UpdateApp
    fn-app_routes_list = laosclient.osc.v1.routes:ListAppRoutes
    fn-app_routes_show = laosclient.osc.v1.routes:ShowAppRoute
    fn-app_routes_create = laosclient.osc.v1.routes:CreateAppRoute
    fn-app_routes_delete = laosclient.osc.v1.routes:DeleteAppRoute
    fn-app_routes_update = laosclient.osc.v1.routes:UpdateAppRoute
    fn-app_route_execute = laosclient.osc.v1.routes:ExecuteAppRoute

[global]
setup-hooks =
    pbr.hooks.setup_hook

[build_sphinx]
source-dir = doc/source
build-dir = doc/build
all_files = 1

[upload_sphinx]
upload-dir = doc/build/html

[wheel]
universal = 1
