[metadata]
name = python-picassoclient
summary = OpenStack Functions API Client Library
description-file =
    README.md
author = OpenStack
author-email = openstack-dev@lists.openstack.org
home-page = http://docs.openstack.org/developer/python-picassoclient
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6

[files]
packages =
    picassoclient

[entry_points]
openstack.cli.extension =
    functions = picassoclient.osc.plugin

openstack.functions.v1 =
    fn_apps_list = picassoclient.osc.v1.apps:ListApps
    fn_apps_show = picassoclient.osc.v1.apps:ShowApp
    fn_apps_create = picassoclient.osc.v1.apps:CreateApp
    fn_apps_delete = picassoclient.osc.v1.apps:DeleteApp
    fn_apps_update = picassoclient.osc.v1.apps:UpdateApp
    fn_routes_list = picassoclient.osc.v1.routes:ListAppRoutes
    fn_routes_show = picassoclient.osc.v1.routes:ShowAppRoute
    fn_routes_create = picassoclient.osc.v1.routes:CreateAppRoute
    fn_routes_delete = picassoclient.osc.v1.routes:DeleteAppRoute
    fn_routes_update = picassoclient.osc.v1.routes:UpdateAppRoute
    fn_routes_execute = picassoclient.osc.v1.routes:ExecuteAppRoute
    fn_routes_expose-url = picassoclient.osc.v1.routes:ExposeAppRouteURL

[global]
setup-hooks =
    pbr.hooks.setup_hook

[build_sphinx]
source-dir = doc/source
build-dir = doc/build
all_files = 1

[upload_sphinx]
upload-dir = doc/build/html

[wheel]
universal = 1
